# ts_nodejs_binary_repro

./: README.md  WORKSPACE  package.json
app/: BUILD.bazel  lib.ts  main.ts
