load("@npm_bazel_typescript//:defs.bzl", "ts_library", "ts_devserver")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary", "rollup_bundle")

package(default_visibility = ["//visibility:public"])

ts_library(
  name = "lib",
  srcs = ["lib.ts"],
  deps = [
    "@npm//five",
    "@npm//@types/node",
  ],
)

ts_library(
  name = "main",
  srcs = ["main.ts"],
  deps = [
    ":lib",
    "@npm//@types/node",
  ],
)

nodejs_binary(
  name = "app",
  entry_point = "__main__/app/main.js",
  data = [
    ":main",
    "@npm//date-fns",
    # Uncomment to fix
    # "@npm//five",
  ],
)

ts_devserver(
  name = "dev",
  port = 8080,
  # This is the path we'll request from the browser, see index.html
  # serving_path = "/bundle.min.js",
  # The devserver can serve our static files too
  # static_files = ["index.html"],
  # We'll collect all the devmode JS sources from these TypeScript libraries
  deps = [":main"],
)

# rollup_bundle(
#     name = "bundle",
#     entry_point = "app/main",
#     deps = [":main"],
# )

# nodejs_image(
#   name = "image",
#   entry_point = "soa/apps/appname/src/main.js",
#   data = [":application"] + NPM_DEPS,
#   repository = "..."
# )